# USpeakNative

./: .gitmodules  CMakeLists.txt  README.md  helpers.h  uspeakframecontainer.cpp  uspeakframecontainer.h  uspeaklite.cpp  uspeaklite.h  uspeaklitewrapper.cpp  uspeakpacket.h  uspeakresampler.cpp  uspeakresampler.h  uspeakvolume.cpp  uspeakvolume.h
internal/: scopedspinlock.h  scopedtrylock.h
opuscodec/: bandmode.h  bitrates.h  opusapp.h  opuscodec.cpp  opuscodec.h  opusdelay.h  opuserror.h  opusframetime.h
test/: base64.h  main.cpp
